--- a/emsp2.ipynb
+++ b/emsp2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "547d6b9d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "fe06d885",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "7256b66e",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4              30  United-States  <=50K  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "f9ec4105",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        "9             0             0              10  United-States  <=50K  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "88dcd538",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
        "48841  United-States   >50K  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "0ddde303",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1270,7 @@
        "[48842 rows x 15 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "afb5ede7",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "275811b2",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1327,7 @@
        "(48842, 15)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "e2e62e27",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "4dcf7624",
    "metadata": {},
    "outputs": [],
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "63059896",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1668,7 @@
        "[48842 rows x 15 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "0de896bd",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "29482aa6",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "90bd405e",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "f1f572f4",
    "metadata": {},
    "outputs": [
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "49a4070f",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "9e98f202",
    "metadata": {},
    "outputs": [
@@ -1829,7 +1829,7 @@
        "(48811, 15)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "4bd05b69",
    "metadata": {},
    "outputs": [
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "1be321c0",
    "metadata": {},
    "outputs": [],
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "8ed29431",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "e1fe02c1",
    "metadata": {},
    "outputs": [
@@ -1906,7 +1906,7 @@
        "(48438, 15)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "id": "6e231514",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "396ae406",
    "metadata": {},
    "outputs": [
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "dadb20eb",
    "metadata": {},
    "outputs": [
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "04a7fc08",
    "metadata": {},
    "outputs": [],
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "7584ff61",
    "metadata": {},
    "outputs": [
@@ -2015,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "98ef41cc",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "b86c03da",
    "metadata": {},
    "outputs": [
@@ -2047,7 +2047,7 @@
        "(46720, 15)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "798f72fe",
    "metadata": {},
    "outputs": [
@@ -2347,7 +2347,7 @@
        "[46720 rows x 15 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "9080570a",
    "metadata": {},
    "outputs": [],
@@ -2376,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "33818981",
    "metadata": {},
    "outputs": [
@@ -2665,7 +2665,7 @@
        "[46720 rows x 15 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "44ecf139",
    "metadata": {},
    "outputs": [
@@ -2953,7 +2953,7 @@
        "[46720 rows x 14 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2966,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "309018a8",
    "metadata": {},
    "outputs": [],
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "id": "54dbc402",
    "metadata": {},
    "outputs": [
@@ -3266,7 +3266,7 @@
        "[46720 rows x 15 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3277,7 +3277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "id": "ff0122e4",
    "metadata": {},
    "outputs": [],
@@ -3292,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "5cb045f0",
    "metadata": {},
    "outputs": [
@@ -3581,7 +3581,7 @@
        "[40625 rows x 15 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3592,7 +3592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "eec0a105",
    "metadata": {},
    "outputs": [
@@ -3617,16 +3617,16 @@
       "🎯 Mean Squared Error: 0.12412287601238313\n",
       "\n",
       "📌 Random Forest Classifier:\n",
-      "✅ Accuracy: 0.8414769230769231\n",
+      "✅ Accuracy: 0.8429538461538462\n",
       "📊 Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.88      0.93      0.90      6560\n",
-      "           1       0.62      0.47      0.53      1565\n",
+      "           0       0.88      0.93      0.91      6560\n",
+      "           1       0.62      0.48      0.54      1565\n",
       "\n",
       "    accuracy                           0.84      8125\n",
       "   macro avg       0.75      0.70      0.72      8125\n",
-      "weighted avg       0.83      0.84      0.83      8125\n",
+      "weighted avg       0.83      0.84      0.84      8125\n",
       "\n",
       "\n",
       "📌 K-Nearest Neighbors Classifier:\n",
@@ -3727,7 +3727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "a91ebda2",
    "metadata": {},
    "outputs": [
@@ -3745,7 +3745,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Example dictionary — replace with your actual results\n",
+    "\n",
     "results = {\n",
     "    'Logistic Regression': 0.85,\n",
     "    'Random Forest': 0.91,\n",
@@ -3755,7 +3755,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "bars = plt.bar(results.keys(), results.values(), color='skyblue', edgecolor='black')\n",
     "\n",
-    "# Add value labels\n",
+    "\n",
     "for bar in bars:\n",
     "    height = bar.get_height()\n",
     "    plt.text(bar.get_x() + bar.get_width() / 2, height + 0.01, f'{height:.2f}', ha='center', va='bottom')\n",
@@ -3770,7 +3770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 39,
    "id": "6bdb4a26",
    "metadata": {},
    "outputs": [
@@ -3779,7 +3779,7 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression: 0.8294\n",
-      "RandomForest: 0.8409\n",
+      "RandomForest: 0.8423\n",
       "KNN: 0.8329\n",
       "SVM: 0.8469\n",
       "GradientBoosting: 0.8585\n",
@@ -3801,28 +3801,27 @@
     "from sklearn.metrics import accuracy_score\n",
     "import joblib\n",
     "\n",
-    "# 1. Load your dataset (make sure to replace with your file)\n",
-    "# data = pd.read_csv(\"your_file.csv\")\n",
     "\n",
-    "# 2. Replace '?' with NaN and fill missing values with mode\n",
+    "\n",
+    "\n",
     "data.replace('?', np.nan, inplace=True)\n",
     "for col in data.columns:\n",
     "    if data[col].isnull().sum() > 0:\n",
     "        data[col] = data[col].fillna(data[col].mode()[0])\n",
     "\n",
-    "# 3. Split features (X) and target (y)\n",
-    "x = pd.get_dummies(data.drop(columns=['income']), drop_first=True)  # Encode categorical features\n",
-    "le = LabelEncoder()\n",
-    "y = le.fit_transform(data['income'])  # Encode labels\n",
     "\n",
-    "# 4. Scale the features\n",
+    "x = pd.get_dummies(data.drop(columns=['income']), drop_first=True)  \n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(data['income'])  \n",
+    "\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "x_scaled = scaler.fit_transform(x)\n",
     "\n",
-    "# 5. Train-test split\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x_scaled, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 6. Define models\n",
+    "\n",
     "models = {\n",
     "    \"LogisticRegression\": LogisticRegression(max_iter=5000),  # Increased iterations\n",
     "    \"RandomForest\": RandomForestClassifier(),\n",
@@ -3831,7 +3830,7 @@
     "    \"GradientBoosting\": GradientBoostingClassifier()\n",
     "}\n",
     "\n",
-    "# 7. Train and evaluate models\n",
+    "\n",
     "results = {}\n",
     "for name, model in models.items():\n",
     "    model.fit(X_train, y_train)\n",
@@ -3853,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "id": "8febe53d",
    "metadata": {},
    "outputs": [
