--- a/emsp2.ipynb
+++ b/emsp2.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing data\n",
     "data= pd.read_csv(r\"C:\\Users\\vinee\\OneDrive\\Desktop\\AI PROJECT\\adult 3.csv\")"
    ]
   },
@@ -1276,6 +1277,7 @@
     }
    ],
    "source": [
+    "#checking for null values\n",
     "data.isna()"
    ]
   },
@@ -3592,7 +3594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "eec0a105",
    "metadata": {},
    "outputs": [
@@ -3617,7 +3619,7 @@
       "🎯 Mean Squared Error: 0.12412287601238313\n",
       "\n",
       "📌 Random Forest Classifier:\n",
-      "✅ Accuracy: 0.8429538461538462\n",
+      "✅ Accuracy: 0.843323076923077\n",
       "📊 Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
@@ -3625,7 +3627,7 @@
       "           1       0.62      0.48      0.54      1565\n",
       "\n",
       "    accuracy                           0.84      8125\n",
-      "   macro avg       0.75      0.70      0.72      8125\n",
+      "   macro avg       0.75      0.71      0.72      8125\n",
       "weighted avg       0.83      0.84      0.84      8125\n",
       "\n",
       "\n",
@@ -3656,7 +3658,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "\n",
-    "# If not already, encode income as binary: <=50K → 0, >50K → 1\n",
+    "\n",
     "data['income'] = data['income'].replace({'<=50K': 0, '>50K': 1})\n",
     "\n",
     "# Define x and y\n",
@@ -3689,7 +3691,6 @@
     "lr_pipeline.fit(X_train, y_train)\n",
     "y_pred_lr = lr_pipeline.predict(X_test)\n",
     "\n",
-    "# Convert regression output to binary using threshold 0.5\n",
     "y_pred_lr_binary = [1 if val >= 0.5 else 0 for val in y_pred_lr]\n",
     "\n",
     "print(\"\\n📌 Linear Regression Output:\")\n",
@@ -3770,7 +3771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6bdb4a26",
    "metadata": {},
    "outputs": [
@@ -3779,7 +3780,7 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression: 0.8294\n",
-      "RandomForest: 0.8423\n",
+      "RandomForest: 0.8427\n",
       "KNN: 0.8329\n",
       "SVM: 0.8469\n",
       "GradientBoosting: 0.8585\n",
@@ -3839,12 +3840,12 @@
     "    results[name] = acc\n",
     "    print(f\"{name}: {acc:.4f}\")\n",
     "\n",
-    "# 8. Get the best model\n",
+    "#Get the best model\n",
     "best_model_name = max(results, key=results.get)\n",
     "best_model = models[best_model_name]\n",
     "print(f\"\\n✅ Best model: {best_model_name} with accuracy {results[best_model_name]:.4f}\")\n",
     "\n",
-    "# 9. Save the best model and scaler\n",
+    "#Save the best model and scaler\n",
     "joblib.dump(best_model, \"best_model.pkl\")\n",
     "joblib.dump(scaler, \"scaler.pkl\")\n",
     "print(\"✅ Saved best model as 'best_model.pkl' and scaler as 'scaler.pkl'\")\n"
@@ -3852,7 +3853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "8febe53d",
    "metadata": {},
    "outputs": [
@@ -3878,10 +3879,10 @@
     "st.title(\"💼 Employee Salary Classification App\")\n",
     "st.markdown(\"Predict whether an employee earns >50K or ≤50K based on input features.\")\n",
     "\n",
-    "# Sidebar inputs (these must match your training feature columns)\n",
+    "\n",
     "st.sidebar.header(\"Input Employee Details\")\n",
     "\n",
-    "# ✨ Replace these fields with your dataset's actual input columns\n",
+    "\n",
     "age = st.sidebar.slider(\"Age\", 18, 65, 30)\n",
     "education = st.sidebar.selectbox(\"Education Level\", [\n",
     "    \"Bachelors\", \"Masters\", \"PhD\", \"HS-grad\", \"Assoc\", \"Some-college\"\n",
@@ -3895,7 +3896,7 @@
     "hours_per_week = st.sidebar.slider(\"Hours per week\", 1, 80, 40)\n",
     "experience = st.sidebar.slider(\"Years of Experience\", 0, 40, 5)\n",
     "\n",
-    "# Build input DataFrame (⚠️ must match preprocessing of your training data)\n",
+    "# Build input DataFrame\n",
     "input_df = pd.DataFrame({\n",
     "    'age': [age],\n",
     "    'education': [education],\n",
